// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`getCredentialCardConfig when color scheme is [dark] should match snapshot for type [] 1`] = `
{
  "background": {
    "colors": [
      "#020626",
      "#1A1A1A",
    ],
  },
  "borderColor": "#5C5D66",
  "color": "#CDD2FC",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/7.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/7.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#B8BACC",
}
`;

exports[`getCredentialCardConfig when color scheme is [dark] should match snapshot for type [EuropeanDisabilityCard] 1`] = `
{
  "background": {
    "colors": [
      "#D6EAF7",
    ],
  },
  "borderColor": "#6B9BB6",
  "color": "#D6EAF7",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/dc_header_overlay.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/dc_card_overlay.png",
  },
  "titleColor": "#17406F",
}
`;

exports[`getCredentialCardConfig when color scheme is [dark] should match snapshot for type [EuropeanHealthInsuranceCard] 1`] = `
{
  "background": {
    "angle": 249,
    "colors": [
      "#B7E1FA",
      "#D0EDFF",
      "#B7E1FA",
      "#D0EDFF",
    ],
    "positions": [
      0.0031,
      0.3686,
      0.6772,
      0.9904,
    ],
  },
  "borderColor": "#449DCF",
  "color": "#B7E1FA",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/ts_header_overlay.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/ts_card_overlay.png",
  },
  "titleColor": "#032D5C",
}
`;

exports[`getCredentialCardConfig when color scheme is [dark] should match snapshot for type [PersonIdentificationData] 1`] = `
{
  "background": {
    "angle": 217,
    "colors": [
      "#EAF6FF",
      "#F6FBFF",
      "#EAF6FF",
      "#F9F9F9",
      "#EAF6FF",
    ],
    "positions": [
      0.0349,
      0.2514,
      0.4646,
      0.7143,
      0.9425,
    ],
  },
  "borderColor": "#4F99E2",
  "color": "#EAF6FF",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/pid_header_overlay.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/pid_card_overlay.png",
  },
  "titleColor": "#115486",
}
`;

exports[`getCredentialCardConfig when color scheme is [dark] should match snapshot for type [a] 1`] = `
{
  "background": {
    "colors": [
      "#261602",
      "#1A1A1A",
    ],
  },
  "borderColor": "#66615C",
  "color": "#FFB357",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/7.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/7.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#CCC3B8",
}
`;

exports[`getCredentialCardConfig when color scheme is [dark] should match snapshot for type [age_verification] 1`] = `
{
  "background": {
    "angle": 180,
    "colors": [
      "#ECECEC",
      "#CECFF2",
    ],
  },
  "borderColor": "#9490BE",
  "color": "#CECFF2",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/av_overlay.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/av_overlay.png",
  },
  "titleColor": "#363740",
}
`;

exports[`getCredentialCardConfig when color scheme is [dark] should match snapshot for type [education_attendance] 1`] = `
{
  "background": {
    "colors": [
      "#020626",
      "#1A1A1A",
    ],
  },
  "borderColor": "#5C5D66",
  "color": "#CDD2FC",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/8.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/8.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#B8BACC",
}
`;

exports[`getCredentialCardConfig when color scheme is [dark] should match snapshot for type [education_attendance] 2`] = `
{
  "background": {
    "colors": [
      "#020626",
      "#1A1A1A",
    ],
  },
  "borderColor": "#5C5D66",
  "color": "#CDD2FC",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/8.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/8.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#B8BACC",
}
`;

exports[`getCredentialCardConfig when color scheme is [dark] should match snapshot for type [education_degree] 1`] = `
{
  "background": {
    "colors": [
      "#021626",
      "#1A1A1A",
    ],
  },
  "borderColor": "#5C6166",
  "color": "#7AC1FA",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/3.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/3.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#B8C3CC",
}
`;

exports[`getCredentialCardConfig when color scheme is [dark] should match snapshot for type [education_degree] 2`] = `
{
  "background": {
    "colors": [
      "#021626",
      "#1A1A1A",
    ],
  },
  "borderColor": "#5C6166",
  "color": "#7AC1FA",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/3.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/3.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#B8C3CC",
}
`;

exports[`getCredentialCardConfig when color scheme is [dark] should match snapshot for type [education_diploma] 1`] = `
{
  "background": {
    "colors": [
      "#261602",
      "#1A1A1A",
    ],
  },
  "borderColor": "#66615C",
  "color": "#FFB357",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/5.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/5.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#CCC3B8",
}
`;

exports[`getCredentialCardConfig when color scheme is [dark] should match snapshot for type [education_diploma] 2`] = `
{
  "background": {
    "colors": [
      "#261602",
      "#1A1A1A",
    ],
  },
  "borderColor": "#66615C",
  "color": "#FFB357",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/5.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/5.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#CCC3B8",
}
`;

exports[`getCredentialCardConfig when color scheme is [dark] should match snapshot for type [education_enrollment] 1`] = `
{
  "background": {
    "colors": [
      "#021626",
      "#1A1A1A",
    ],
  },
  "borderColor": "#5C6166",
  "color": "#7AC1FA",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/5.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/5.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#B8C3CC",
}
`;

exports[`getCredentialCardConfig when color scheme is [dark] should match snapshot for type [education_enrollment] 2`] = `
{
  "background": {
    "colors": [
      "#021626",
      "#1A1A1A",
    ],
  },
  "borderColor": "#5C6166",
  "color": "#7AC1FA",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/5.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/5.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#B8C3CC",
}
`;

exports[`getCredentialCardConfig when color scheme is [dark] should match snapshot for type [eu.europa.ec.eudi.mdl.1] 1`] = `
{
  "background": {
    "colors": [
      "#261602",
      "#1A1A1A",
    ],
  },
  "borderColor": "#66615C",
  "color": "#FFB357",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/8.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/8.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#CCC3B8",
}
`;

exports[`getCredentialCardConfig when color scheme is [dark] should match snapshot for type [eu.europa.ec.eudi.pid.1] 1`] = `
{
  "background": {
    "colors": [
      "#021626",
      "#1A1A1A",
    ],
  },
  "borderColor": "#5C6166",
  "color": "#7AC1FA",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/8.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/8.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#B8C3CC",
}
`;

exports[`getCredentialCardConfig when color scheme is [dark] should match snapshot for type [mDL] 1`] = `
{
  "background": {
    "angle": 249,
    "colors": [
      "#FADCF5",
      "#FFECFC",
      "#FADCF5",
      "#FFECFC",
    ],
    "positions": [
      0.0041,
      0.3614,
      0.6716,
      1.0251,
    ],
  },
  "borderColor": "#D674A9",
  "color": "#FADCF5",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/mdl_header_overlay.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/mdl_card_overlay.png",
  },
  "titleColor": "#652035",
}
`;

exports[`getCredentialCardConfig when color scheme is [dark] should match snapshot for type [org.iso.someNewCredential] 1`] = `
{
  "background": {
    "colors": [
      "#021426",
      "#1A1A1A",
    ],
  },
  "borderColor": "#5C6166",
  "color": "#003366",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/3.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/3.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#B8C2CC",
}
`;

exports[`getCredentialCardConfig when color scheme is [dark] should match snapshot for type [residency] 1`] = `
{
  "background": {
    "colors": [
      "#021426",
      "#1A1A1A",
    ],
  },
  "borderColor": "#5C6166",
  "color": "#003366",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/7.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/7.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#B8C2CC",
}
`;

exports[`getCredentialCardConfig when color scheme is [dark] should match snapshot for type [residency] 2`] = `
{
  "background": {
    "colors": [
      "#021426",
      "#1A1A1A",
    ],
  },
  "borderColor": "#5C6166",
  "color": "#003366",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/7.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/7.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#B8C2CC",
}
`;

exports[`getCredentialCardConfig when color scheme is [dark] should match snapshot for type [unknown_credential_type] 1`] = `
{
  "background": {
    "colors": [
      "#261602",
      "#1A1A1A",
    ],
  },
  "borderColor": "#66615C",
  "color": "#FFB357",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/4.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/4.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#CCC3B8",
}
`;

exports[`getCredentialCardConfig when color scheme is [dark] should match snapshot for type [🪪] 1`] = `
{
  "background": {
    "colors": [
      "#020626",
      "#1A1A1A",
    ],
  },
  "borderColor": "#5C5D66",
  "color": "#CDD2FC",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/5.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/5.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#B8BACC",
}
`;

exports[`getCredentialCardConfig when color scheme is [light] should match snapshot for type [] 1`] = `
{
  "background": {
    "colors": [
      "#E6E8FF",
      "#F2F2F2",
    ],
  },
  "borderColor": "#737799",
  "color": "#CDD2FC",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/7.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/7.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#2B2C33",
}
`;

exports[`getCredentialCardConfig when color scheme is [light] should match snapshot for type [EuropeanDisabilityCard] 1`] = `
{
  "background": {
    "colors": [
      "#D6EAF7",
    ],
  },
  "borderColor": "#6B9BB6",
  "color": "#D6EAF7",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/dc_header_overlay.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/dc_card_overlay.png",
  },
  "titleColor": "#17406F",
}
`;

exports[`getCredentialCardConfig when color scheme is [light] should match snapshot for type [EuropeanHealthInsuranceCard] 1`] = `
{
  "background": {
    "angle": 249,
    "colors": [
      "#B7E1FA",
      "#D0EDFF",
      "#B7E1FA",
      "#D0EDFF",
    ],
    "positions": [
      0.0031,
      0.3686,
      0.6772,
      0.9904,
    ],
  },
  "borderColor": "#449DCF",
  "color": "#B7E1FA",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/ts_header_overlay.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/ts_card_overlay.png",
  },
  "titleColor": "#032D5C",
}
`;

exports[`getCredentialCardConfig when color scheme is [light] should match snapshot for type [PersonIdentificationData] 1`] = `
{
  "background": {
    "angle": 217,
    "colors": [
      "#EAF6FF",
      "#F6FBFF",
      "#EAF6FF",
      "#F9F9F9",
      "#EAF6FF",
    ],
    "positions": [
      0.0349,
      0.2514,
      0.4646,
      0.7143,
      0.9425,
    ],
  },
  "borderColor": "#4F99E2",
  "color": "#EAF6FF",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/pid_header_overlay.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/pid_card_overlay.png",
  },
  "titleColor": "#115486",
}
`;

exports[`getCredentialCardConfig when color scheme is [light] should match snapshot for type [a] 1`] = `
{
  "background": {
    "colors": [
      "#FFF3E6",
      "#F2F2F2",
    ],
  },
  "borderColor": "#998873",
  "color": "#FFB357",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/7.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/7.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#33302B",
}
`;

exports[`getCredentialCardConfig when color scheme is [light] should match snapshot for type [age_verification] 1`] = `
{
  "background": {
    "angle": 180,
    "colors": [
      "#ECECEC",
      "#CECFF2",
    ],
  },
  "borderColor": "#9490BE",
  "color": "#CECFF2",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/av_overlay.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/av_overlay.png",
  },
  "titleColor": "#363740",
}
`;

exports[`getCredentialCardConfig when color scheme is [light] should match snapshot for type [education_attendance] 1`] = `
{
  "background": {
    "colors": [
      "#E6E8FF",
      "#F2F2F2",
    ],
  },
  "borderColor": "#737799",
  "color": "#CDD2FC",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/8.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/8.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#2B2C33",
}
`;

exports[`getCredentialCardConfig when color scheme is [light] should match snapshot for type [education_attendance] 2`] = `
{
  "background": {
    "colors": [
      "#E6E8FF",
      "#F2F2F2",
    ],
  },
  "borderColor": "#737799",
  "color": "#CDD2FC",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/8.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/8.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#2B2C33",
}
`;

exports[`getCredentialCardConfig when color scheme is [light] should match snapshot for type [education_degree] 1`] = `
{
  "background": {
    "colors": [
      "#E6F4FF",
      "#F2F2F2",
    ],
  },
  "borderColor": "#738899",
  "color": "#7AC1FA",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/3.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/3.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#2B3033",
}
`;

exports[`getCredentialCardConfig when color scheme is [light] should match snapshot for type [education_degree] 2`] = `
{
  "background": {
    "colors": [
      "#E6F4FF",
      "#F2F2F2",
    ],
  },
  "borderColor": "#738899",
  "color": "#7AC1FA",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/3.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/3.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#2B3033",
}
`;

exports[`getCredentialCardConfig when color scheme is [light] should match snapshot for type [education_diploma] 1`] = `
{
  "background": {
    "colors": [
      "#FFF3E6",
      "#F2F2F2",
    ],
  },
  "borderColor": "#998873",
  "color": "#FFB357",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/5.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/5.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#33302B",
}
`;

exports[`getCredentialCardConfig when color scheme is [light] should match snapshot for type [education_diploma] 2`] = `
{
  "background": {
    "colors": [
      "#FFF3E6",
      "#F2F2F2",
    ],
  },
  "borderColor": "#998873",
  "color": "#FFB357",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/5.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/5.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#33302B",
}
`;

exports[`getCredentialCardConfig when color scheme is [light] should match snapshot for type [education_enrollment] 1`] = `
{
  "background": {
    "colors": [
      "#E6F4FF",
      "#F2F2F2",
    ],
  },
  "borderColor": "#738899",
  "color": "#7AC1FA",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/5.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/5.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#2B3033",
}
`;

exports[`getCredentialCardConfig when color scheme is [light] should match snapshot for type [education_enrollment] 2`] = `
{
  "background": {
    "colors": [
      "#E6F4FF",
      "#F2F2F2",
    ],
  },
  "borderColor": "#738899",
  "color": "#7AC1FA",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/5.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/5.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#2B3033",
}
`;

exports[`getCredentialCardConfig when color scheme is [light] should match snapshot for type [eu.europa.ec.eudi.mdl.1] 1`] = `
{
  "background": {
    "colors": [
      "#FFF3E6",
      "#F2F2F2",
    ],
  },
  "borderColor": "#998873",
  "color": "#FFB357",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/8.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/8.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#33302B",
}
`;

exports[`getCredentialCardConfig when color scheme is [light] should match snapshot for type [eu.europa.ec.eudi.pid.1] 1`] = `
{
  "background": {
    "colors": [
      "#E6F4FF",
      "#F2F2F2",
    ],
  },
  "borderColor": "#738899",
  "color": "#7AC1FA",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/8.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/8.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#2B3033",
}
`;

exports[`getCredentialCardConfig when color scheme is [light] should match snapshot for type [mDL] 1`] = `
{
  "background": {
    "angle": 249,
    "colors": [
      "#FADCF5",
      "#FFECFC",
      "#FADCF5",
      "#FFECFC",
    ],
    "positions": [
      0.0041,
      0.3614,
      0.6716,
      1.0251,
    ],
  },
  "borderColor": "#D674A9",
  "color": "#FADCF5",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/mdl_header_overlay.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/mdl_card_overlay.png",
  },
  "titleColor": "#652035",
}
`;

exports[`getCredentialCardConfig when color scheme is [light] should match snapshot for type [org.iso.someNewCredential] 1`] = `
{
  "background": {
    "colors": [
      "#E6F2FF",
      "#F2F2F2",
    ],
  },
  "borderColor": "#738699",
  "color": "#003366",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/3.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/3.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#2B2F33",
}
`;

exports[`getCredentialCardConfig when color scheme is [light] should match snapshot for type [residency] 1`] = `
{
  "background": {
    "colors": [
      "#E6F2FF",
      "#F2F2F2",
    ],
  },
  "borderColor": "#738699",
  "color": "#003366",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/7.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/7.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#2B2F33",
}
`;

exports[`getCredentialCardConfig when color scheme is [light] should match snapshot for type [residency] 2`] = `
{
  "background": {
    "colors": [
      "#E6F2FF",
      "#F2F2F2",
    ],
  },
  "borderColor": "#738699",
  "color": "#003366",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/7.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/7.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#2B2F33",
}
`;

exports[`getCredentialCardConfig when color scheme is [light] should match snapshot for type [unknown_credential_type] 1`] = `
{
  "background": {
    "colors": [
      "#FFF3E6",
      "#F2F2F2",
    ],
  },
  "borderColor": "#998873",
  "color": "#FFB357",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/4.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/4.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#33302B",
}
`;

exports[`getCredentialCardConfig when color scheme is [light] should match snapshot for type [🪪] 1`] = `
{
  "background": {
    "colors": [
      "#E6E8FF",
      "#F2F2F2",
    ],
  },
  "borderColor": "#737799",
  "color": "#CDD2FC",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/5.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/5.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#2B2C33",
}
`;

exports[`getCredentialCardConfig when color scheme is [undefined] should match snapshot for type [] 1`] = `
{
  "background": {
    "colors": [
      "#E6E8FF",
      "#F2F2F2",
    ],
  },
  "borderColor": "#737799",
  "color": "#CDD2FC",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/7.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/7.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#2B2C33",
}
`;

exports[`getCredentialCardConfig when color scheme is [undefined] should match snapshot for type [EuropeanDisabilityCard] 1`] = `
{
  "background": {
    "colors": [
      "#D6EAF7",
    ],
  },
  "borderColor": "#6B9BB6",
  "color": "#D6EAF7",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/dc_header_overlay.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/dc_card_overlay.png",
  },
  "titleColor": "#17406F",
}
`;

exports[`getCredentialCardConfig when color scheme is [undefined] should match snapshot for type [EuropeanHealthInsuranceCard] 1`] = `
{
  "background": {
    "angle": 249,
    "colors": [
      "#B7E1FA",
      "#D0EDFF",
      "#B7E1FA",
      "#D0EDFF",
    ],
    "positions": [
      0.0031,
      0.3686,
      0.6772,
      0.9904,
    ],
  },
  "borderColor": "#449DCF",
  "color": "#B7E1FA",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/ts_header_overlay.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/ts_card_overlay.png",
  },
  "titleColor": "#032D5C",
}
`;

exports[`getCredentialCardConfig when color scheme is [undefined] should match snapshot for type [PersonIdentificationData] 1`] = `
{
  "background": {
    "angle": 217,
    "colors": [
      "#EAF6FF",
      "#F6FBFF",
      "#EAF6FF",
      "#F9F9F9",
      "#EAF6FF",
    ],
    "positions": [
      0.0349,
      0.2514,
      0.4646,
      0.7143,
      0.9425,
    ],
  },
  "borderColor": "#4F99E2",
  "color": "#EAF6FF",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/pid_header_overlay.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/pid_card_overlay.png",
  },
  "titleColor": "#115486",
}
`;

exports[`getCredentialCardConfig when color scheme is [undefined] should match snapshot for type [a] 1`] = `
{
  "background": {
    "colors": [
      "#FFF3E6",
      "#F2F2F2",
    ],
  },
  "borderColor": "#998873",
  "color": "#FFB357",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/7.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/7.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#33302B",
}
`;

exports[`getCredentialCardConfig when color scheme is [undefined] should match snapshot for type [age_verification] 1`] = `
{
  "background": {
    "angle": 180,
    "colors": [
      "#ECECEC",
      "#CECFF2",
    ],
  },
  "borderColor": "#9490BE",
  "color": "#CECFF2",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/av_overlay.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/av_overlay.png",
  },
  "titleColor": "#363740",
}
`;

exports[`getCredentialCardConfig when color scheme is [undefined] should match snapshot for type [education_attendance] 1`] = `
{
  "background": {
    "colors": [
      "#E6E8FF",
      "#F2F2F2",
    ],
  },
  "borderColor": "#737799",
  "color": "#CDD2FC",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/8.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/8.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#2B2C33",
}
`;

exports[`getCredentialCardConfig when color scheme is [undefined] should match snapshot for type [education_attendance] 2`] = `
{
  "background": {
    "colors": [
      "#E6E8FF",
      "#F2F2F2",
    ],
  },
  "borderColor": "#737799",
  "color": "#CDD2FC",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/8.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/8.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#2B2C33",
}
`;

exports[`getCredentialCardConfig when color scheme is [undefined] should match snapshot for type [education_degree] 1`] = `
{
  "background": {
    "colors": [
      "#E6F4FF",
      "#F2F2F2",
    ],
  },
  "borderColor": "#738899",
  "color": "#7AC1FA",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/3.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/3.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#2B3033",
}
`;

exports[`getCredentialCardConfig when color scheme is [undefined] should match snapshot for type [education_degree] 2`] = `
{
  "background": {
    "colors": [
      "#E6F4FF",
      "#F2F2F2",
    ],
  },
  "borderColor": "#738899",
  "color": "#7AC1FA",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/3.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/3.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#2B3033",
}
`;

exports[`getCredentialCardConfig when color scheme is [undefined] should match snapshot for type [education_diploma] 1`] = `
{
  "background": {
    "colors": [
      "#FFF3E6",
      "#F2F2F2",
    ],
  },
  "borderColor": "#998873",
  "color": "#FFB357",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/5.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/5.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#33302B",
}
`;

exports[`getCredentialCardConfig when color scheme is [undefined] should match snapshot for type [education_diploma] 2`] = `
{
  "background": {
    "colors": [
      "#FFF3E6",
      "#F2F2F2",
    ],
  },
  "borderColor": "#998873",
  "color": "#FFB357",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/5.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/5.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#33302B",
}
`;

exports[`getCredentialCardConfig when color scheme is [undefined] should match snapshot for type [education_enrollment] 1`] = `
{
  "background": {
    "colors": [
      "#E6F4FF",
      "#F2F2F2",
    ],
  },
  "borderColor": "#738899",
  "color": "#7AC1FA",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/5.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/5.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#2B3033",
}
`;

exports[`getCredentialCardConfig when color scheme is [undefined] should match snapshot for type [education_enrollment] 2`] = `
{
  "background": {
    "colors": [
      "#E6F4FF",
      "#F2F2F2",
    ],
  },
  "borderColor": "#738899",
  "color": "#7AC1FA",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/5.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/5.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#2B3033",
}
`;

exports[`getCredentialCardConfig when color scheme is [undefined] should match snapshot for type [eu.europa.ec.eudi.mdl.1] 1`] = `
{
  "background": {
    "colors": [
      "#FFF3E6",
      "#F2F2F2",
    ],
  },
  "borderColor": "#998873",
  "color": "#FFB357",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/8.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/8.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#33302B",
}
`;

exports[`getCredentialCardConfig when color scheme is [undefined] should match snapshot for type [eu.europa.ec.eudi.pid.1] 1`] = `
{
  "background": {
    "colors": [
      "#E6F4FF",
      "#F2F2F2",
    ],
  },
  "borderColor": "#738899",
  "color": "#7AC1FA",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/8.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/8.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#2B3033",
}
`;

exports[`getCredentialCardConfig when color scheme is [undefined] should match snapshot for type [mDL] 1`] = `
{
  "background": {
    "angle": 249,
    "colors": [
      "#FADCF5",
      "#FFECFC",
      "#FADCF5",
      "#FFECFC",
    ],
    "positions": [
      0.0041,
      0.3614,
      0.6716,
      1.0251,
    ],
  },
  "borderColor": "#D674A9",
  "color": "#FADCF5",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/mdl_header_overlay.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/mdl_card_overlay.png",
  },
  "titleColor": "#652035",
}
`;

exports[`getCredentialCardConfig when color scheme is [undefined] should match snapshot for type [org.iso.someNewCredential] 1`] = `
{
  "background": {
    "colors": [
      "#E6F2FF",
      "#F2F2F2",
    ],
  },
  "borderColor": "#738699",
  "color": "#003366",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/3.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/3.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#2B2F33",
}
`;

exports[`getCredentialCardConfig when color scheme is [undefined] should match snapshot for type [residency] 1`] = `
{
  "background": {
    "colors": [
      "#E6F2FF",
      "#F2F2F2",
    ],
  },
  "borderColor": "#738699",
  "color": "#003366",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/7.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/7.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#2B2F33",
}
`;

exports[`getCredentialCardConfig when color scheme is [undefined] should match snapshot for type [residency] 2`] = `
{
  "background": {
    "colors": [
      "#E6F2FF",
      "#F2F2F2",
    ],
  },
  "borderColor": "#738699",
  "color": "#003366",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/7.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/7.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#2B2F33",
}
`;

exports[`getCredentialCardConfig when color scheme is [undefined] should match snapshot for type [unknown_credential_type] 1`] = `
{
  "background": {
    "colors": [
      "#FFF3E6",
      "#F2F2F2",
    ],
  },
  "borderColor": "#998873",
  "color": "#FFB357",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/4.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/4.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#33302B",
}
`;

exports[`getCredentialCardConfig when color scheme is [undefined] should match snapshot for type [🪪] 1`] = `
{
  "background": {
    "colors": [
      "#E6E8FF",
      "#F2F2F2",
    ],
  },
  "borderColor": "#737799",
  "color": "#CDD2FC",
  "headerOverlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/5.png",
  },
  "overlay": {
    "testUri": "../../../img/features/itWallet/cards/overlay/default/5.png",
  },
  "overlayBlend": true,
  "showCornerOverlay": true,
  "titleColor": "#2B2C33",
}
`;
